static/css/local.css
html {
    height: 100vh
}

body {
    min-height: 100vh;
    display: flex;
    flex-direction: column
}

.img-text {
    height: 1.5ex;
    vertical-align: baseline
}

#pagetop {
    flex: 1
}

.photo {
    width: 144px;
    height: 144px
}

.inline-gravatar, .title {
    display: inline-block
}

.inline-gravatar {
    height: 1em
}

.requiredField {
    font-weight: 700
}

.asteriskField {
    display: none
}

a.anchor {
    display: block;
    position: relative;
    top: -80px;
    visibility: hidden
}

.my-responsive {
    width: 50%;
    max-width: 500px;
    height: auto;
    float: right
}

.markdown-text p:last-child {
    margin-bottom: 0
}

.markdown-text img {
    max-width: 100%;
    width: 600px
}

.hover-parent .hover-only {
    visibility: hidden
}

.hover-only:hover, .hover-parent:hover .hover-only {
    visibility: visible
}

.right-above {
    position: absolute;
    right: 1rem;
    top: 1rem
}

.vote-option > label:hover {
    background: #edeff1
}

input:checked + .vote-option > label {
    background: #007bff;
    color: #fff
}

input:checked + .vote-option > label:hover {
    background: #0067d6;
    color: #fff
}

pre {
    white-space: pre-line;
    background-color: #fff;
    background-clip: border-box;
    padding: .75rem 1.25rem;
    border: 1px solid rgba(0, 0, 0, .125);
    border-radius: .25rem
}

.text-break-all {
    word-break: break-all !important;
    overflow-wrap: break-word !important
}

.alert-block ul {
    padding-left: 0;
    list-style: none;
    margin-bottom: 0
}

blockquote {
    padding-left: 1rem;
    border-left: #ced4da;
    border-width: 2px;
    border-left-style: solid
}

label{
    display:block;
    /*font-size:20px; */
}

::placeholder {
    color: black;
}

:root {
    --mentea-generic-bg: #439481;
    --mentea-generic-sidenav-bg: #f5f9f0
}

/* NEW CONTENT FOR MENTEA */
.bg-mentea {
    background-color: var(--mentea-generic-bg) !important;
}

.bg-mentea-sidenav {
    background-color: var(--mentea-generic-sidenav-bg) !important;
}

.bg-mentee-green {
    background-color: #439481 !important;
}

.bg-mentee-sidenav {
    background-color: #f5f9f0 !important;
}

.bg-mentor-blue {
    background-color: #32357b !important;
}

.bg-mentor-sidenav {
    background-color: #eaf2f7 !important;
}

.btn-rounded {
    border-radius: 4rem !important;
}

.btn-mentea {
    background-color: var(--mentea-generic-bg) !important;
    border-color: var(--mentea-generic-bg) !important;
}
.btn-mentea:hover {
    background-color: #439481 !important;
}

.color-mentea {
    color: var(--mentea-generic-bg) !important;
}

.float-container {
    padding: 10px;
}

.float-child {
    width: 50%;
    float: left;
    padding: 10px;
}  

.select-mentor {
    width: 30%;
    padding: 16px 20px;
    border: none;
    border-radius: 20px;
    background-color: #80BAE4;
}

.text-mentor {
    width: 30%;
    padding: 16px 20px;
    border: none;
    border-radius: 20px;
    background-color: #80BAE4;
}

.bg-block-mentor {
    width: 100%;
    padding: 16px 20px;
    border-radius: 20px;
    color: white;
    background-color: #32357b; 
}

.bg-block-main-green {
    overflow:auto;
    float:left;
    width:100%;
    height:calc(100vh - 40px);
     position:absolute;
    top:0;
    left:0; 

    /* display:flex;
    flex-direction:column;
    height:100%;

    width: 100%; */
    /* height: auto; */
    /* position:absolute;
    top:0;
    left:0; */
    color: white;
    background-color:var(--mentea-generic-bg); 
    /* ADD493 */
}
.bg-child-block {
    height:100%;
    width: 100%; 
}

.bg-block-main-brown {
    height:150px;
    /* flex-grow:1;
    height:0;
    overflow:scroll;
*/
    width: 100%; 
    /* height: 1000px; */
    /* position:absolute;
    top:800px;
    left:0; */
    color: white;
    background-color: #FFCC99; 
}

.bg-block-main-light {
    height:150px;
    /* flex-grow:1;
    height:0;
    overflow:scroll; */

    width: 100%;
    /* width: 100%;
    height: 1000px;
    position:absolute;
    top:1600px;
    left:0; */
    color: white;
    background-color: #D2F1A5; 
}

.bg-text-boxes-homepage {
    width:40%; 
    height:auto; 
    padding: 30px; 
    border: none; 
    border-radius: 20px;
    background-color:#AFD5C7;
}

.bg-text-boxes-homepage2 {
    width:40%; 
    height:auto; 
    padding: 30px; 
    border:10px solid #AFD5C7;
    border-radius: 20px;
}

